--- a/laravel/assignment/public/css/style.css
+++ b/laravel/assignment/public/css/style.css
@@ -157,7 +157,7 @@ h3 {
   border-radius: 10px;
 }
 
-input[type='file'] {
+/*input[type='file'] {
   position: absolute;
   top: 0;
   left: 0;
@@ -165,7 +165,7 @@ input[type='file'] {
   padding: 24px 0;
   cursor: pointer;
   opacity: 0;
-}
+}*/
 
 .update-upload {
   width: 80%;
@@ -189,4 +189,24 @@ input[type='file'] {
 .m-r {
   margin-right: 10px;
   color: #22ff00;
+}
+.b-color{
+  color: #0000ff;
+}
+.import{
+  background-color: skyblue;
+  display: inline-block;
+  width: 200px;
+}
+.import input{
+  border: 1px solid red;
+  display: inline;
+  width: 140px;
+  padding: 0;
+}
+.import .btn-import{
+  margin: 0;
+  display: inline;
+  width: 50px;
+  padding: 10px 0;
 }
