--- a/laravel/assignment/public/css/style.css
+++ b/laravel/assignment/public/css/style.css
@@ -7,8 +7,7 @@ body {
 }
 
 .table-data {
-  width: 90%;
-  margin: 0 auto;
+  width: 100%;
   padding: 0 20px 20px 20px;
 }
 
@@ -195,42 +194,26 @@ h3 {
   color: #0000ff;
 }
 .import{
-  background-color: #cb998f;
-  display: inline-block;
-  width: 210px;
-  margin-right: 3px;
+  width: 76%;
+  margin: 0 auto;
   border-radius: 10px;
+  padding: 10px 30px;
 }
-.import input{
-  border: 1px solid red;
-  display: inline;
-  width: 140px;
-  padding: 0;
-  margin-top: 14px;
-}
+
 .import .btn-import{
-  margin: 0;
-  display: inline;
-  width: 19px;
   border-radius: 10px;
-  background-color: transparent;
-  color: #00ff;
-  font-size: 28px;
-}
-.import .btn-import:hover{
-  background-color: transparent;
 }
 .sample{
   font-size: 20px;
 }
 .search-form{
-  width: 90%;
+  width: 85%;
   margin: 4% auto;
   padding: 0 9px;
 }
 .search-form .btn{
   margin: 0;
   background-color: #00ff;
-  margin-top: 37px;
+  margin-top: 29px;
   padding: 6px 25px;
 }
