--- a/laravel/assignment/public/css/style.css
+++ b/laravel/assignment/public/css/style.css
@@ -73,7 +73,7 @@ input[type=password]:focus {
   outline: none;
 }
 
-button[type=submit] {
+button[type=submit],.create-btn,.edit-btn {
   width: 100%;
   margin: 8px 0;
   padding: 10px 20px;
